# Coding-Snippets

./: .gitignore  README.md
Python/: Base imports.py  Colour Module.py  GoToTest.py  Python Essentials.py  arraytest.py  classtest.py  credits.py  curltest.py  float_test.py  for loops test.py  forkbomb.py  input.py  linejump.py  print speed test.py  typewritter.py
R/: core.r
Rust/CLS/: CLS.rs
Rust/IfInput/: Cargo.toml
Rust/Input/: input.rs
Rust/Print/: print.rs
Rust/VarAssign/: Cargo.toml
Rust/api/: Cargo.toml
Rust/async_test/: Cargo.toml
Rust/barddownload/: .gitignore  Cargo.toml  bard_music_player_links.txt  readme.md  xivbardarchivedownloader.bat  xivmididownloader.bat
Rust/barddownload/src/: main.rs
Rust/bully_luna/: Cargo.toml
Rust/cli_arg_parse/: Cargo.toml
Rust/discord_webhook/: Cargo.toml
Rust/dlls/: Cargo.toml
Rust/doubblefortest/: Cargo.toml
Rust/egui/: Cargo.toml
Rust/egui/src/: main.rs
Rust/envs/: .env  Cargo.toml
Rust/file_lister/: Cargo.toml
Rust/file_mover/: Cargo.toml
Rust/float_test/: Cargo.toml
Rust/forkbomb/: Cargo.toml
Rust/get_user_number/: Cargo.toml
Rust/ifStatement/: Cargo.toml
Rust/impl_test/: Cargo.toml
Rust/modules/: credits.rs
Rust/pingtest/: Cargo.toml
Rust/print_speed_test/: Cargo.toml
Rust/run_cli_commands/: Cargo.toml
Rust/sleep/: sleep.rs
Rust/sqltest/: Cargo.toml
Rust/test-api/: Cargo.toml
Rust/test-sql/: Cargo.toml  makefile  sql.db
Rust/toast_test/: Cargo.toml
Rust/tui/: Cargo.toml
Scripts/Linux/: Lowercase File Renamer.txt
Utilities/Java/: GeneralUtils.java  (+1 more)
(+51 files in other folders)
