[package]
name = "bard_downloader"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["stream"] }
futures = "0.3"
regex = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
indicatif = "0.18.3"
chrono = "0.4"
scraper = "0.25.0"
